dev/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  # namespace: ingress-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: servetc/twix-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        # env:
        # - name: REACT_APP_API_BASE_URL_TWEET
        #   value: "http://localhost:8081"
        # - name: REACT_APP_API_BASE_URL_USER
        #   value: "http://localhost:8082"
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  # namespace: ingress-nginx
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
