dev/tweet-api.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: tweet-api-deployment
  # namespace: ingress-nginx
  labels:
    app: tweet-api

spec:
  replicas: 1

  selector:
    matchLabels:
      app: tweet-api

  template:
    metadata:
      labels:
        app: tweet-api

    spec:
      containers:
      - name: tweet-api
        image: servetc/twix:latest
        # imagePullPolicy: IfNotPresent
        imagePullPolicy: Always

        ports:
          - containerPort: 8081
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 300m
---
apiVersion: v1
kind: Service
metadata:
  name: tweet-api-service
spec:
  selector:
    app: tweet-api
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
