dev/auth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress 
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/auth-url: "http://auth-api-service.twix.svc.cluster.local:8083/auth/validate"  
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:    
      - path: /tweet
        pathType: Prefix
        backend:
          service:
            name: tweet-api-service
            port:
              number: 8081
      - path: /user
        pathType: Prefix
        backend:
          service:
            name: user-api-service
            port:
              number: 8082
      # - path: /auth
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: auth-api-service
      #       port:
      #         number: 8083
