dev/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: example-ingress   
# spec:
#   ingressClassName: nginx
#   rules:
#   - http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: frontend-service
#             port:
#               number: 80
#       - path: /tweet
#         pathType: Prefix
#         backend:
#           service:
#             name: tweet-api-service
#             port:
#               number: 8081
#       - path: /user
#         pathType: Prefix
#         backend:
#           service:
#             name: user-api-service
#             port:
#               number: 8082
#       - path: /auth
#         pathType: Prefix
#         backend:
#           service:
#             name: auth-api-service
#             port:
#               number: 8083




apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://auth-api-service:8083/auth/validate"
    nginx.ingress.kubernetes.io/auth-signin: "http://user-api-service:8082/user/login"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /tweet
        pathType: Prefix
        backend:
          service:
            name: tweet-api-service
            port:
              number: 8081
      - path: /user
        pathType: Prefix
        backend:
          service:
            name: user-api-service
            port:
              number: 8082
