dev/ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://auth-api-service:8083/authenticate"
    nginx.ingress.kubernetes.io/auth-signin: "http://auth-api-service:8083/signin"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /tweet
        pathType: Prefix
        backend:
          service:
            name: tweet-api-service
            port:
              number: 8081
      - path: /user
        pathType: Prefix
        backend:
          service:
            name: user-api-service
            port:
              number: 8082
