dev/non-auth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: non-auth-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:   
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80   
      - path: /user/login
        pathType: Exact
        backend:
          service:
            name: user-api-service
            port:
              number: 8082
      - path: /user/register
        pathType: Exact
        backend:
          service:
            name: user-api-service
            port:
              number: 8082
